@@ -22,6 +22,8 @@ CHANGES - Current Version:
 - Added reporting access mode to error message in TABINDFile::Open()
   (GDAL changeset r12460, ticket 1620)
 
+- Fixed leaks in ITABFeature???::Set???FromStyleString() (GDAL ticket 1696)
+
 
 Version 1.6.3 (2007-10-12)
 --------------------------
@@ -850,5 +852,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.200 2007-12-11 03:43:02 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.201 2007-12-11 04:21:54 dmorissette Exp $
 ------------
